--- a/css/cart.css
+++ b/css/cart.css
@@ -81,23 +81,128 @@ main {
       border: solid #e0e0e0 0.2rem;
       border-radius: 1rem;
       display: flex;
-      label {
-        width: 100%;
+      article {
         position: relative;
-        article {
-          height: 20rem;
+        width: 100%;
+        height: 20rem;
+        display: flex;
+        input {
+          margin: auto 3rem;
+        }
+        label {
+          width: 100%;
           display: flex;
           flex-direction: row;
           align-items: center;
         }
-        .delete-btn {
-          background-color: unset;
-          border: none;
-          position: absolute;
-          width: fit-content;
-          top: 1.8rem;
-          right: 1.8rem;
+      }
+      .goods-details {
+        flex: 1.7;
+        display: grid;
+        grid-template-areas:
+          "img seller"
+          "img name"
+          "img price"
+          "img price"
+          "img delivery";
+        align-items: center;
+        justify-content: start;
+        row-gap: 1rem;
+        column-gap: 3.6rem;
+        img {
+          width: 16rem;
+          height: 16rem;
+          border-radius: 1rem;
+          grid-area: img;
         }
+        p {
+          font-size: 1.4rem;
+          color: var(--font-color);
+        }
+        p:first-of-type {
+          grid-area: seller;
+        }
+        h3 {
+          grid-area: name;
+        }
+        span {
+          grid-area: price;
+          align-self: self-start;
+          font-size: 1.6rem;
+          font-weight: bold;
+        }
+        span:after {
+          content: "원";
+        }
+        p:last-of-type {
+          grid-area: delivery;
+        }
+      }
+      .goods-quantity {
+        flex: 1;
+        display: flex;
+        justify-content: center;
+        position: relative;
+        input {
+          margin: 0;
+          width: 15rem;
+          height: 5rem;
+          border-radius: 0.5rem;
+          text-align: center;
+          border: solid 0.1rem var(--border-color);
+          background-color: var(--main-color);
+        }
+        input::-webkit-inner-spin-button {
+          -webkit-appearance: none;
+        }
+
+        .minus,
+        .plus {
+          position: relative;
+          background-color: #ffffff1a;
+          border: none;
+          width: 5rem;
+          height: 5rem;
+          top: 0.2rem;
+        }
+
+        .minus img,
+        .plus img {
+          width: 2rem;
+          height: 2rem;
+        }
+
+        .minus {
+          border-right: solid 0.1rem var(--border-color);
+          left: 5rem;
+        }
+
+        .plus {
+          border-left: solid 0.1rem var(--border-color);
+          right: 5rem;
+        }
+      }
+      .goods-price {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 2.6rem;
+        p {
+          font-weight: bold;
+          color: var(--error-color);
+        }
+        button {
+          padding: 1rem 3.563rem;
+        }
+      }
+      .delete-btn {
+        background-color: unset;
+        border: none;
+        position: absolute;
+        width: fit-content;
+        top: 1.8rem;
+        right: 1.8rem;
       }
     }
   }
